fix for the add bar to be visible when 0 entries

--- a/src/components/add-cell.css
+++ b/src/components/add-cell.css
@@ -1,10 +1,12 @@
 .add-cell {
   position: relative;
   opacity: 0;
-  transition: opacity 0.3s;
+  transition: opacity 0.3s ease-in 0.1s;
+  margin: 8px 0;
 }
 
-.add-cell:hover {
+.add-cell:hover,
+.add-cell.force-visible {
   opacity: 1;
 }
 
